fixed shadow again that was affected by overflow hidden

--- a/sass/layout/_reviews.scss
+++ b/sass/layout/_reviews.scss
@@ -24,7 +24,7 @@
 }
 
 .carousel {
-  // overflow: hidden;
+  overflow: hidden;
   position: relative;
   margin-top: 3rem;
   margin-bottom: 3rem;
@@ -62,7 +62,7 @@
   height: 100%;
 
   &__slide {
-    height: 100%;
+    height: 98%;
     position: absolute;
     
     &__testimonial { //this is content
