--- a/style.css
+++ b/style.css
@@ -472,6 +472,7 @@ a {
       color: #f0d250; }
 
 .carousel {
+  overflow: hidden;
   position: relative;
   margin-top: 3rem;
   margin-bottom: 3rem; }
@@ -497,7 +498,7 @@ a {
 .slider {
   height: 100%; }
   .slider__slide {
-    height: 100%;
+    height: 98%;
     position: absolute; }
     .slider__slide__testimonial {
       background-color: #ffffff;
